Correct overflow issue on subscribe form

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -63,23 +63,14 @@ nav a:hover {
   display: inline-block;
   padding: 10px;
 }
-.subscribe {
-  margin-left:100px;
-  margin-right: 2px;
-  padding: 10px 10px;
-}
-form {
-  margin-left: 10px;
-}
 button {
+  width:180px;
+  height:60px;
+  margin-left:16px;
+  margin-bottom:4px;
   background-color:black;
-  color: white;
-  border: solid 1px orangered;
-  margin: 2px 2px;
-  padding: 1px 1px;
-  width: 100px;
-  height: 50px;
-  border-radius: 25px;
+  color:white;
+  border-radius: 8px 8px;
 }
 
 footer {
